# exclusive-bt-switcher

./: Cargo.toml  README.md  install.sh
resources/: btswitch.desktop  exclusive-bt-switcher.desktop
src/: app.rs  error.rs  main.rs  state.rs
src/audio/: pipewire.rs
src/bluetooth/: device.rs  manager.rs  mod.rs  uuids.rs
src/ui/: device_row.rs  mod.rs  tray.rs  window.rs
