[package]
name = "btswitch"
version = "0.1.0"
edition = "2021"
description = "Exclusively lock one Bluetooth audio device at a time"

[dependencies]
gtk4 = "0.9"
zbus = { version = "4", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ksni = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
